@@ -10,6 +10,7 @@ Fri, 14 Jul 2006 21:07:56 +0200 <thp@perli.net>
 	  it and added a progress bar to it
 	* gPodderChannelReader now accepts an optional callback
 	  parameter for download status indication (see above)
+	* Fixed multiple selection for downloaded item info box
 
 Fri, 07 Jul 2006 14:21:59 +0200 <thp@perli.net>
 	* Added workarounds to libopmlreader to support 
